src/test/egern/success/function_no_parameters.egern
func noParams() {
    var a = 4;
    return a;
}
