src/test/egern/fail/assign_void_fail.egern
func empty(): void {
    return;
}
var a = empty();
print(a);
